style: #670 fix styles for sidebar on mobile 320px (#960)
* style: #670 fit goal description block on small screens

* style: #670 change size of minWidthBlock

* style: #670 trancate an email and move 'likes' element to the bottom on UserCard on small screens

* style: #670 fix user card responsivity to prevent star icon going outside

* style: #670 fit content on statistics dialog for small screens

--- a/mw-webapp/src/component/modal/ModalContent/ModalContent.module.scss
+++ b/mw-webapp/src/component/modal/ModalContent/ModalContent.module.scss
@@ -33,6 +33,10 @@ $modal-animation-time: 150ms;
   &:focus {
     outline: none;
   }
+
+  @media only screen and (max-width: $mediaWidthMobileMedium) {
+    padding: 0;
+  }
 }
 
 .closeButton {
